# update-supply-chain-information

./: .env.ci  .env.example  .gitignore  .locust.conf  .pre-commit-config.yaml  Makefile  Procfile  README.md  conftest.py  cypress.json  docker-compose.override.yaml  docker-compose.yaml  get_last_working_day_this_month.py  manage.py  manifest.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_functional_tests.sh  run_monthlyupdate_tests.sh  user-post.sh  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: run-tests.yaml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0004_user_receive_feedback_emails.py  0005_add_field_last_modified_20210621_1058.py
accounts/test/: factories.py  test_auth.py  test_models.py
action_progress/: forms.py  mixins.py
action_progress/test/: test_sap_form.py
activity_stream/: README.md  authentication.py  models.py  serializers.py  viewsets.py
activity_stream/serializers/: base_serialzier.py  supply_chain.py
activity_stream/test/: conftest.py  test_activity_stream_endpoint.py  test_authentication.py  test_pagination.py  test_viewsets.py
api/: conftest.py  requirements.txt  sample.env
api/api/: fixtures.json  settings.py  urls.py
assets/js/: application.js
assets/stylesheets/: application.scss
assets/webpack_bundles/: main-d79890805dc92d1aa48e.css  main-d79890805dc92d1aa48e.js
chain_details/: apps.py  views.py
chain_details/templates/: chain_details_base.html  gsc_notes.html  gsc_notes_section.html  rag_rating_legend.html  scenario_assessment.html
chain_details/templatetags/: get_criticality_category_text.py  gsc_notes.py  (+1 more)
codebuild/: process.yml
config/: asgi.py  middleware.py  urls.py  wsgi.py
defend_data_capture/: conftest.py  fixtures.json  local-requirements.txt  manage.py  pytest.ini  requirements.txt  sample.env  test_settings.py
docker/: Dockerfile.dev
fixtures/: govDepartment.json  strategicActionUpdates.json  supplyChainStages.json  supplyChains.json  user.json  vulnerabilityAssessments.json
healthcheck/: middleware.py  models.py  views.py
load_test/: locustfile.py
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
scripts/: web.sh
setup/: init.sql
supply_chains/: admin.py  apps.py  forms.py  mixins.py  models.py  utils.py  views.py
update_supply_chain_information/: conftest.py  manage.py  pytest.ini  sample.env  test_settings.py
(+455 files in other folders)
