[tool.poetry]
name = "update-supply-chain-information"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
poetry = "1.5.1"
python = "~=3.8.17"
appdirs= "~=1.4.4"
asgiref= "~=3.3.2"
attrs= "~=20.3.0"
certifi= "~=2023.07.22"
cfgv= "~=3.2.0"
chardet= "~=4.0.0"
click= "~=8.1.3"
ConfigArgParse= "~=1.4.1"
convertdate= "~=2.3.2"
coverage= "~=5.5"
defusedxml= "~=0.6.0"
diff-match-patch= "~=20200713"
distlib= "~=0.3.1"
Django= "~=3.2.20"
django-environ= "~=0.4.5"
django-import-export= "~=2.5.0"
django-ipware= "~=3.0.2"
django-log-formatter-ecs= "~=0.0.5"
django-reversion= "~=3.0.9"
django-staff-sso-client= "~=3.1.0"
django-webpack-loader= "~=1.0.0"
djangorestframework= "~=3.12.2"
et-xmlfile= "~=1.0.1"
factory-boy= "~=3.2.0"
Faker= "~=6.0.0"
filelock= "~=3.12.2"
hawkrest= "~=1.0.1"
hijri-converter= "~=2.1.1"
holidays= "~=0.10.5.2"
identify= "~=1.5.13"
idna= "~=2.10"
importlib-metadata= "~=4.4.0"
iniconfig= "~=1.1.1"
itsdangerous= "~=2.1.2"
jdcal= "~=1.4.1"
Jinja2= "~=3.1.2"
korean-lunar-calendar= "~=0.2.1"
kubi-ecs-logger= "~=0.1.0"
MarkupPy= "~=1.14"
MarkupSafe= "~=2.1.2"
marshmallow= "~=3.6.1"
mohawk= "~=1.1.0"
msgpack= "~=1.0.2"
mypy-extensions= "~=0.4.3"
nodeenv= "~=1.5.0"
oauthlib= "~=3.2.2"
odfpy= "~=1.4.1"
openpyxl= "~=3.0.6"
packaging= "~=20.9"
pathspec= "~=0.9.0"
pluggy= "~=0.13.1"
pre-commit= "~=2.10.0"
psutil= "~=5.8.0"
psycopg2-binary= "~=2.9.5"
py= "~=1.11.0"
PyMeeus= "~=0.5.11"
pyparsing= "~=2.4.7"
pytest= "~=7.2.0"
pytest-cov= "~=2.12.0"
pytest-django= "~=4.1.0"
python-dateutil= "~=2.8.1"
pytz= "~=2020.5"
PyYAML= "~=5.4.1"
pyzmq= "~=22.2.1"
regex= "~=2020.11.13"
requests= "~=2.31.0"
requests-oauthlib= "~=1.3.0"
sentry-sdk= "~=1.14.0"
six= "~=1.15.0"
sqlparse= "~=0.4.2"
tablib= "~=3.0.0"
text-unidecode= "~=1.3"
toml= "~=0.10.2"
typed-ast= "~=1.5.4"
typing-extensions= "~=3.10.0.0"
urllib3= "~=1.26.15"
virtualenv= "~=20.24.0"
Werkzeug= "~=2.3.1"
whitenoise= "~=5.2.0"
xlrd= "~=2.0.1"
xlwt= "~=1.3.0"
zipp= "~=3.4.1"
"zope.event"= "~=4.5.0"
"zope.interface"= "~=5.4.0"
django-simple-history= "~=3.0.0"
greenlet = "~=2.0.0"
gevent= "~=22.10.2"
psycogreen= "~=1.0.2"
elastic-apm= "~=6.2.0"
gunicorn = "~=20.0.4,<21"

[tool.poetry.dev-dependencies]
django-debug-toolbar= "~=3.2.1"
pip-tools = "~=6.0.1"
locust = "~=2.15.1"
flake8 = "~=4.0.1" 
black = "~=22.3.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
